--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
     <script src="../js/jquery-2.1.1.js"></script>
     <script src="../js/game.js"></script>
     <script src="../js/board.js"></script>
