Board mostly done…need pics.

--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,7 @@
     <script src="../js/game.js"></script>
     <script src="../js/board.js"></script>
     <link href="../css/custom.css" rel="stylesheet" type="text/css">
+    <link href="../css/board.css" rel="stylesheet" type="text/css">
     <script src="../bundle.js"></script>
   </head>
   <body>
